# frankenscipy

./: .gitignore  .skill-loop-progress.md  CHANGELOG.md  Cargo.toml  PARITY-COVERAGE.md  README.md  diff_sph.py
.beads/: issues.jsonl
bench/: scipy_baseline.py
crates/fsci-arrayapi/src/: creation.rs
crates/fsci-cluster/benches/: cluster_bench.rs
crates/fsci-cluster/src/: lib.rs
crates/fsci-conformance/: Cargo.toml
crates/fsci-conformance/fixtures/: FSCI-P2C-003_optimize_core.json  FSCI-P2C-011_signal_core.json
crates/fsci-conformance/python_oracle/: scipy_signal_oracle.py
crates/fsci-conformance/src/: lib.rs  metamorphic.rs
crates/fsci-conformance/tests/: diff_arrayapi_broadcast_audit_equivalence.rs  diff_arrayapi_creation_audit_record.rs  diff_fft.rs  (+574 more)
crates/fsci-interpolate/: Cargo.toml
crates/fsci-spatial/: Cargo.toml
crates/fsci-spatial/benches/: spatial_bench.rs
crates/fsci-spatial/src/: lib.rs
crates/fsci-special/: Cargo.toml
crates/fsci-stats/: Cargo.toml
docs/: GAUNTLET_RELEASE_SCORECARD.md  NEGATIVE_EVIDENCE.md  perf_ledger_cc.md  perf_oracle_ap.py  perf_oracle_delaunay.py  perf_oracle_gmm.py  perf_oracle_griddata.py  perf_oracle_hier.py  perf_oracle_integrate_stiff.py  perf_oracle_kde.py  perf_oracle_kendall.py  perf_oracle_mgc.py  perf_oracle_signal2.py  perf_oracle_silhouette.py  perf_oracle_special_cephes.py  perf_oracle_spmv.py  perf_oracle_xform.py  perf_oracle_zoom.py
docs/perf/: CARGO_RECOVERY_BACKLOG.md  make_interp_spline_banded_plan.md
docs/progress/: perf-negative-results.md  perf-release-readiness-scorecard.md
(+2150 files in other folders)
