[package]
name = "fsci-spatial"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fsci-linalg = { workspace = true }
fsci-runtime = { workspace = true }
fsci-sparse = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "spatial_bench"
harness = false

[lints]
workspace = true
